--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#FFF"
     tools:context=".LoginActivity">
-    
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Pendidikan Informatika\nSTKIP PGRI Sumbar"
+            android:text="Pendidikan Informatika\nUniversitas PGRI Sumbar"
             android:textColor="#FFF"
             android:textSize="25sp"
             android:textStyle="bold"/>
@@ -42,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="30dp">
-                
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -58,12 +58,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Enter Username" />
-                
+
                 <EditText
                     android:id="@+id/et_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="ENter Password"
+                    android:hint="Enter Password"
                     android:inputType="textPassword" />
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -90,7 +90,7 @@
                         android:text="Clean"
                         android:textAllCaps="false"/>
                 </LinearLayout>
-                
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -99,31 +99,31 @@
                     android:text="Belum Punya Akun"
                     android:textSize="20sp"
                     android:textStyle="bold" />
-                 <LinearLayout
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:gravity="center"
-                     android:orientation="horizontal">
-                     
-                     <TextView
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:layout_gravity="center"
-                         android:gravity="center"
-                         android:text="Register"
-                         android:textSize="20sp"
-                         android:textStyle="bold" />
-                     <TextView
-                         android:id="@+id/tv_disini"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:layout_gravity="center"
-                         android:gravity="center"
-                         android:text="disini"
-                         android:textColor="@color/colorPrimaryDark"
-                         android:textSize="20sp"
-                         android:textStyle="bold" />
-                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:text="Register "
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/tv_disini"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:text="Disini"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
