--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,13 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFF"
     tools:context=".RegisterActivity">
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/bgel"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
+
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
@@ -18,51 +21,56 @@
         android:background="#8F000000"
         android:gravity="center"
         android:orientation="vertical">
+
         <TextView
-            android:textColor="#FFF"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pendidikan Informatika\nSTKIP PGRI Sumbar" />
+            android:gravity="center"
+            android:text="Pendidikan Informatika\nUniversitas PGRI Sumbar"
+            android:textColor="#FFF"
+            android:textSize="25sp"
+            android:textStyle="bold"/>
         <androidx.cardview.widget.CardView
-            android:layout_margin="45dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="45dp"
             android:elevation="4dp"
             app:cardCornerRadius="20dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="30dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="30dp">
+
                 <TextView
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="20dp"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textStyle="bold"
-                    android:textSize="25sp"
-                    android:gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Register" />
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="20dp"
+                    android:gravity="center"
+                    android:text="Register"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
                 <EditText
                     android:id="@+id/et_username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Enter Username" />
+
                 <EditText
-                    android:inputType="textPassword"
                     android:id="@+id/et_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Enter Password" />
+                    android:hint="ENter Password"
+                    android:inputType="textPassword" />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="end"
                     android:orientation="horizontal">
+
                     <Button
                         android:textColor="#FFF"
                         android:background="@drawable/bg_btn_biru"
@@ -70,8 +78,9 @@
                         android:id="@+id/btn_submit"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Submit"
+                        android:text="Sign in"
                         android:textAllCaps="false" />
+
                     <Button
                         android:textColor="#FFF"
                         android:background="@drawable/bg_btn_merah"
@@ -81,37 +90,39 @@
                         android:text="Clean"
                         android:textAllCaps="false"/>
                 </LinearLayout>
+
                 <TextView
-                    android:layout_gravity="center"
-                    android:textStyle="bold"
-                    android:textSize="20sp"
-                    android:gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Sudah Punya Akun" />
-                <LinearLayout
+                    android:layout_gravity="center"
                     android:gravity="center"
+                    android:text="Sudah Punya Akun"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
                     android:orientation="horizontal">
+
                     <TextView
-                        android:layout_gravity="center"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
-                        android:gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Log in " />
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:text="Login "
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
                     <TextView
                         android:id="@+id/tv_disini"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:layout_gravity="center"
-                        android:textStyle="bold"
-                        android:textSize="20sp"
-                        android:gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="disini" />
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:text="Disini"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
