--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,23 +6,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SplashScreen">
+
     <LinearLayout
-        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_marginStart="8dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/icon"
-            android:layout_marginBottom="25dp"/>
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginBottom="25dp"
+            android:src="@drawable/icon" />
+
         <TextView
-            android:textColor="#FFF"
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pendidikan Informatika\nSTKIP PGRI Sumbar"/>
+            android:gravity="center"
+            android:text="Pendidikan Informatika\nUniversitas PGRI Sumbar"
+            android:textColor="#FFF"
+            android:textSize="25sp"
+            android:textStyle="bold" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
